<resources>
    <string name="app_name">spicetrack</string>
    <string name="Start">Get Started</string>

    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t Have an Account?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="let_s_learn_more_about_spices">Let’s Learn More About Spices</string>
    <string name="halo">Halo!</string>
    <string name="welcome_to_spicetrack">Welcome to SpiceTrack</string>
    <string name="back">back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="splash_image">splash</string>
    <string name="scan_your_spice">Scan Your Spice</string>


    <string name="spicetrack">SpiceTrack</string>
    <string name="title1">Scan Your Spice</string>
    <string name="desc1">Find out what spice it is with your spice scan</string>
    <string name="title2">Find Out Recipes</string>
    <string name="desc2">Explore creative recipes using the best spices</string>
    <string name="title3">Find articles</string>
    <string name="desc3">Learn the benefits, history and uses of spices through interesting articles</string>
    <string name="reg">Get Started</string>
    <string name="log">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="image1">Image 1</string>
    <string name="image2">Image 2</string>
    <string name="image3">Image 3</string>
    <string name="create_an_account">Let’s Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_conditions">Agree with Terms and Conditions</string>
    <string name="Welcome">Welcome</string>
    <string name="image">p</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="name_hint">masukan full name</string>
    <string name="search">search article</string>
    <string name="name">name</string>
    <string name="search_icon">search_icon</string>
    <string name="profile_picture">profile_picture</string>
    <string name="scan_icon">scan_icon</string>
    <string name="spice_of_the_day">Spice_of_the_day</string>
    <string name="spice_image">article_image</string>
    <string name="spice_name">serahhh</string>
    <string name="result">Hasil Analisis</string>
    <string name="close">close</string>
    <string name="gallery">gallery</string>
    <string name="capture">capture</string>
    <string name="up">upload</string>
    <string name="preview">Preview</string>
    <string name="switch_camera">switch_camera</string>
    <string name="upload">unggah</string>
    <string name="unggah">unggah</string>
    <string name="switch_kamera">sitch kamera</string>

    <!--  CONTENT DESCRIPTION  -->
    <string name="img_icon_description">IMG_ICON</string>
    <string name="img_field_description">IMG_FIELD</string>
    <string name="cam_description">CAM_BTN</string>
    <string name="back_button_description">BACK_BTN</string>
    <string name="gallery_description">GALLERY_BTN</string>
    <string name="grid_description">GRID_BTN</string>
    <string name="list_description">LIST_BTN</string>
    <string name="rv_post_description">RV_POST</string>
    <string name="btn_dashboard">BTN_DASHBOARD</string>

    <!--  DASHBOARD  -->
    <string name="dashboard_scan" translatable="false">SCAN</string>
    <string name="dashboard_catalog" translatable="false">CATALOG</string>
    <string name="dashboard_likes" translatable="false">LIKES</string>
    <string name="scroll_up_button">Scroll Up</string>
    <string name="drawer_hello">Hello !</string>
    <string name="app_name2">Spice Track</string>
    <string name="fyp">You might like this</string>
    <string name="empty_image_warning">warning</string>
    <string name="search_Icon">search_icon</string>
    <string name="Search_Spice">search your spice</string>


</resources>